2009-03-23 Borut Razem <borut.razem AT siol.net>

	* src/SDCCval.c, src/SDCCmain.c, device/include/limits.h,
	  device/include/pic/limits.h, device/include/pic16/limits.h,
	  device/lib/_fs2schar.c, device/lib/pic/libsdcc/fs2schar.c,
	  device/lib/pic16/libsdcc/float/fs2schar.c, doc/sdccman.lyx,
	  support/regression/tests/funsigned-char.c:
	  applied patch 2704189: character constant sign fix
	  thanks to Robert Larice

2009-03-22 Borut Razem <borut.razem AT siol.net>

	* Small Device C Compiler 2.9.0 released
	* .version, doc/sdccman.lyx: changed sdcc version to 2.9.1

2009-03-15 Borut Razem <borut.razem AT siol.net>

	* support/scripts/repack_release.sh: added

2009-03-13 Borut Razem <borut.razem AT siol.net>

	* doc/sdccman.lyx: "freeware" replaced with "free open source"

2009-03-12 Borut Razem <borut.razem AT siol.net>

	* src/z80/peep.c: #2652979: --debug crashes sdcc

2009-03-12 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* src/SDCCglue.c,
	  support/regression/tests/bug2655200.c:
	  applied modified patch from Robert Larice <larice AT vidisys.de>
	  fixing original report of bug #2655200: pointer to pdata memory
	  not correctly initialized

2009-03-11 Borut Razem <borut.razem AT siol.net>

	* as/asranlib/asranlib.c: retain the original file mode

2009-03-10 Borut Razem <borut.razem AT siol.net>

	* src/mcs51/gen.c, src/z80/gen.c, src/hc08/gen.c, src/ds390/gen.c,
	  support/regression/tests/bug1875933.c:
	  fixed bug #1875933: Evelyn jumps into the void
	  thanks to Robert Larice

2009-03-10 Raphael Neider <rneider AT web.de>

	* src/pic16/pcode.c (LinkFlow): fix invalid cast from pCodeLabel
	  to pCodeInstruction to avoid a segmentation fault

2009-03-03 Borut Razem <borut.razem AT siol.net>

	* device/lib/printf_large.c: fixed bug #2656821: bug in printf

2009-03-03 Raphael Neider <rneider AT web.de>

	* device/lib/pic/libdev/Makefile.in: build device-specific
	  libraries for the correct processor, fixes #2654585
